# PerOXO

./: .gitignore  Cargo.toml  Makefile  PERFORMANCE_AND_EXPANSION_PLAN.md  README.md  client.html  commands.txt  docker-compose.yaml  docker-compose_prebuilt.yaml  grafana_dashboard.json  learnings.md  prometheus.yml  schema.txt
.github/workflows/: docker-image.yml
auth-service/: Cargo.toml  Dockerfile  build.rs
auth-service/src/: db.rs  google_auth.rs  grpc.rs  handlers.rs  main.rs  rate_limit.rs  tenant.rs  user_token.rs
chat-service/: Cargo.toml  Dockerfile  build.rs  docker-compose.yaml
chat-service/proto/: chat_service.proto
chat-service/src/: chat_services.rs  main.rs  migrations.rs  queries.rs  rabbit.rs  utils.rs
chat-service/src/migrations/: migration.rs  migrations.rs
docs/peroxo/: actor-model.md  breakdown.md  components.md  learnings.md
peroxo/: Cargo.toml  Dockerfile  build.rs  client.html
peroxo/proto/: auth_service.proto  chat_service.proto  matcher.proto
peroxo/src/: chat.rs  connections.rs  lib.rs  main.rs  metrics.rs  socket.rs  state.rs  tenant.rs
peroxo/src/actors/: connection_manager.rs  message_router.rs  mod.rs  persistance_actor.rs  room_actor.rs  user_session.rs  uuid_util.rs
peroxo/src/actors/message_router/: handlers.rs  messages.rs  router.rs
peroxo/src/actors/persistance_actor/: actor.rs  handlers.rs  messages.rs
peroxo/src/actors/user_session/: handlers.rs  mod.rs  session.rs
peroxo/src/handlers/: conversation.rs
peroxo/src/mongo_db/: config.rs  mod.rs  models.rs
rabbit_consumer/: Cargo.toml  Dockerfile
rabbit_consumer/src/: direct_message.rs  dm_consumer.rs  main.rs  message_handler.rs  room.rs  scylla_db.rs
src/: chat.rs  main.rs  state.rs
user-service/: Cargo.toml  Dockerfile  build.rs
user-service/proto/: user_service.proto
user-service/src/: main.rs
