[package]
name = "per_oxo"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".","user-service"]

[dependencies]
scylla = "1.1.0"
tokio = { version = "1.44.2", features = ["full"] }
axum = { version = "0.8.3", features = ["macros","ws"] }
tracing = "0.1.41"
serde = {version = "1.0.219", features = ["derive"]}
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0.140"
futures = "0.3.31"
tower-http = { version = "0.6.1", features = ["cors"] }


