[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
nanoid = "0.4.0"
rand = "0.8.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["postgres","runtime-tokio-rustls"]}
tokio = { version = "1.48.0", features = ["full"] }
axum = { version = "0.7", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
redis = "1.0.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tower-http = { version = "0.6", features = ["cors"] }
tonic = { version = "0.9", features = ["transport"] }
prost = "0.11"

[build-dependencies]
tonic-build = "0.9"

[package.metadata.sqlx]
offline = true
