[package]
name = "chat-service"
version = "0.1.0"
edition = "2024"

[dependencies]
scylla = "1.1.0"
tokio = { version = "1.44.2", features = ["full"] }
prost = "0.13.5"
tonic = { version = "0.13.0", features = ["transport"] }
uuid = { version = "1", features = ["v1", "std","serde"] }
chrono ={ version = "0.4", features = ["serde"] }
lapin = "2.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic-health = "0.13.1"

[build-dependencies]
tonic-build = "0.13.0"
