[package]
name = "per_oxo"
version = "0.1.1"
edition = "2024"
description = "A highly reactive chat_server"
license = "MIT"
repository = "https://github.com/Sidharth-Singh10/PerOXO"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "per_oxo"

[features]
default = []
persistence = []
mongo_db = ["mongodb"] 

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
axum = { version = "0.8.3", features = ["macros", "ws"] }
tracing = "0.1.41"
serde = { version = "1.0.219", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0.140"
futures = "0.3.31"
tower-http = { version = "0.6.1", features = ["cors"] }
prost = "0.13.5"
tonic = { version = "0.13.0", features = ["transport"] }
dotenv = "0.15.0"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
chrono = "0.4.41"
mongodb = { version = "3.3.0", optional = true }

[build-dependencies]
tonic-build = "0.13.0"
