[package]
name = "rabbit_consumer"
version = "0.1.0"
edition = "2024"

[dependencies]
scylla = "1.1.0"
tokio = { version = "1.44.2", features = ["full"] }
lapin = "2.5.3"
uuid = { version = "1", features = ["v1", "std","serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures-lite = "2.0"