[package]
name = "user-service"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
prost = "0.13.5"
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.44.2", features = ["full"] }
tonic = { version = "0.13.0", features = ["transport"] }


[build-dependencies]
tonic-build = "0.13.0"
